# treewalk

./: Cargo.toml  README.md
src/: lib.rs  main.rs  walk.rs
src/walk/: comparison.rs  format.rs  lineage.rs  utils.rs
tests/: walk.rs
tests/test_files/children/: sym1.txt
tests/test_files/test_dir1/: file4.txt  file6.txt
tests/test_files/test_dir1/dir4/: file1.txt
